# git-author-reformer

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  install.sh
.github/workflows/: ci.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.1-MILESTONE-AUDIT.md
.planning/milestones/: v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/phases/01-foundation-read-layer/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-PATTERNS.md  01-RESEARCH.md  01-REVIEW.md  01-VERIFICATION.md
.planning/phases/02-rewrite-engine/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-PATTERNS.md  02-RESEARCH.md  02-REVIEW-FIX.md  02-REVIEW.md  02-VERIFICATION.md
.planning/phases/03-tui-integration/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-CONTEXT.md  03-PATTERNS.md  (+3 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
scripts/: release.sh
src/: error.rs  lib.rs  main.rs
src/git/: mod.rs  preflight.rs  reader.rs  rewrite.rs  scan.rs  types.rs
src/hook/: mod.rs  parse.rs  path.rs  render.rs  write.rs
src/tui/: app.rs  event.rs  mod.rs  render.rs
tests/: hook_test.rs  install_script_test.sh  main_integration_test.rs  preflight_test.rs  reader_test.rs  rewrite_test.rs  scan_test.rs
tests/common/: mod.rs
(+55 files in other folders)
